move filter regex pattern to config file

--- a/rss-job.cfg
+++ b/rss-job.cfg
@@ -3,3 +3,4 @@ urllist=[
 "https://novosibirsk.hh.ru/search/vacancy/rss?order_by=publication_time&specialization=1&schedule=remote&enable_snippets=true&text=Scala&clusters=true&no_magic=true&search_period=30", # scala remote
 "https://novosibirsk.hh.ru/search/vacancy/rss?order_by=publication_time&specialization=1&schedule=remote&enable_snippets=true&no_magic=true&clusters=true&search_period=30" # вся удалёнка
 ]
+filterRegex="PHP|JavaScript"
